Fix toggle accessibility on mobile

--- a/src/search/directions/directions.scss
+++ b/src/search/directions/directions.scss
@@ -1,5 +1,5 @@
 #mwz-searchDirection {
-
+    
     border-radius: 8px;
     
     width: 400px;
@@ -9,27 +9,11 @@
     
     background-color:  white;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 -1px 0px rgba(0,0,0,0.02);
-
+    
     pointer-events: auto;
-
-
-    .mwz-accessible-button-selected{
-        background-color: #C51586;
-    }
-    .mwz-accessible-button{
-        padding: 2px 22px 2px 22px;
-        border-radius: 30px !important;
-    }
-    .mwz-close-button{
+    
+    .mwz-close-button {
         width: 18px !important;
-    }
-    .mwz-padding-left{
-        position: absolute;
-        left: 35%;
-    }
-    .mwz-padding-right{
-        position: absolute;
-        left: 60%;
     }
     .mwz-searchLine {
         height: 50px;
@@ -87,12 +71,22 @@
             }
         }
     }
-
+    
+    #mwz-reverse-button {
+        margin-top: -35px;
+    }
+    
     .mwz-accessibleLine {
-        height: 30px;
-        margin-bottom: 0;
-        margin-top: 10px;
-
+        height: 35px;
+        margin: 0;
+        
+        .mwz-accessible-button-selected {
+            background-color: #C51586;
+        }
+        .mwz-accessible-button {
+            padding: 2px 22px 2px 22px;
+            border-radius: 30px !important;
+        }
         .mwz-button-icon {
             button {
                 border: none;
@@ -101,12 +95,15 @@
                 }
             }
         }
+        .mwz-accessible-separator {
+            width: 30px;
+        }
     }
     
     #mwz-alert-noDirection {
         display: none;
         border-radius: 0;
-
+        
         margin-bottom: 0;
     }
 }
@@ -116,15 +113,11 @@
         margin-top: 0;
         width: 100%;
     }
-    &.mwz-directions{
+    &.mwz-directions {
         #searchResults {
             margin-left: 0;
             width: 100%;
+        }
     }
-    }
-   
+    
 }
-#mwz-reverse-button{
-    margin-top: -35px;
-}
-
